// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReservationForm ReservationForm default matches snapshot 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="chakra-form-control css-thxs3d"
      role="group"
    >
      <div
        class="css-yjtq8f"
      >
        <h3
          class="chakra-heading css-mxgfwf"
        >
          Make a Reservation
        </h3>
        <p
          class="chakra-text css-11o6bb1"
        >
          Get in touch with restaurant
        </p>
      </div>
      <div
        class="css-6wfi37"
      >
        <div
          class="css-pl1d54"
        >
          <div
            class="css-0"
          >
            <div
              class="react-datepicker-wrapper"
            >
              <div
                class="react-datepicker__input-container"
              >
                <input
                  class="chakra-input css-nr8l43"
                  id="field-:r2:"
                  placeholder="MM/DD/YYYY"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-select__wrapper css-1uge2rn"
          >
            <select
              class="chakra-select css-1srlo7p"
              data-testid="selectTime"
              id="field-:r2:"
              name="time"
              style="padding-left: 40px;"
            >
              <option
                value="11:00 am"
              >
                11:00 am
              </option>
              <option
                value="12:00 am"
              >
                12:00 am
              </option>
              <option
                value="13:00 pm"
              >
                13:00 pm
              </option>
              <option
                value="14:00 pm"
              >
                14:00 pm
              </option>
              <option
                value="15:00 pm"
              >
                15:00 pm
              </option>
              <option
                value="16:00 pm"
              >
                16:00 pm
              </option>
              <option
                value="17:00 pm"
              >
                17:00 pm
              </option>
              <option
                value="18:00 pm"
              >
                18:00 pm
              </option>
              <option
                value="19:00 pm"
              >
                19:00 pm
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-1rn5cz7"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon chakra-select__icon css-13wnv3o"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentColor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-select__wrapper css-42b2qy"
        >
          <select
            class="chakra-select css-1srlo7p"
            data-testid="selectPerson"
            id="field-:r2:"
            name="person"
            style="padding-left: 40px;"
          >
            <option
              value="1 Person"
            >
              1 Person
            </option>
            <option
              value="2 Person"
            >
              2 Person
            </option>
            <option
              value="3 Person"
            >
              3 Person
            </option>
            <option
              value="4 Person"
            >
              4 Person
            </option>
            <option
              value="5 Person"
            >
              5 Person
            </option>
            <option
              value="6 Person"
            >
              6 Person
            </option>
            <option
              value="7 Person"
            >
              7 Person
            </option>
            <option
              value="8 Person"
            >
              8 Person
            </option>
            <option
              value="9 Person"
            >
              9 Person
            </option>
            <option
              value="10 Person"
            >
              10 Person
            </option>
          </select>
          <div
            class="chakra-select__icon-wrapper css-1rn5cz7"
          >
            <svg
              aria-hidden="true"
              class="chakra-icon chakra-select__icon css-13wnv3o"
              focusable="false"
              role="presentation"
              style="width: 1em; height: 1em; color: currentColor;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-1610dfo"
      >
        <button
          class="chakra-button css-h4ij4d"
          type="submit"
        >
          Book Now
        </button>
      </div>
    </div>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`ReservationForm ReservationForm with full field matches snapshot 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="chakra-form-control css-thxs3d"
      role="group"
    >
      <div
        class="css-yjtq8f"
      >
        <h3
          class="chakra-heading css-mxgfwf"
        >
          Make a Reservation
        </h3>
        <p
          class="chakra-text css-u5t5z0"
        >
          Get in touch with restaurant
        </p>
      </div>
      <div
        class="css-shk6y1"
      >
        <input
          class="chakra-input css-vsl0b9"
          id="field-:r0:"
          name="firstName"
          placeholder="First Name"
          type="text"
        />
        <input
          class="chakra-input css-vsl0b9"
          id="field-:r0:"
          name="lastName"
          placeholder="Last Name"
          type="text"
        />
      </div>
      <div
        class="css-9xs73v"
      >
        <input
          class="chakra-input css-1lqzwk"
          id="field-:r0:"
          name="email"
          placeholder="Email"
          type="email"
        />
      </div>
      <div
        class="css-9xs73v"
      >
        <input
          class="chakra-input css-1lqzwk"
          id="field-:r0:"
          name="phone"
          placeholder="Phone"
          type="tel"
          value=""
        />
      </div>
      <div
        class="css-1ctr036"
      >
        <div
          class="css-pl1d54"
        >
          <div
            class="css-0"
          >
            <div
              class="react-datepicker-wrapper"
            >
              <div
                class="react-datepicker__input-container"
              >
                <input
                  class="chakra-input css-130huxc"
                  id="field-:r0:"
                  placeholder="MM/DD/YYYY"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="chakra-select__wrapper css-1bvc7kd"
          >
            <select
              class="chakra-select css-1srlo7p"
              data-testid="selectTime"
              id="field-:r0:"
              name="time"
              style="padding-left: 40px;"
            >
              <option
                value="11:00 am"
              >
                11:00 am
              </option>
              <option
                value="12:00 am"
              >
                12:00 am
              </option>
              <option
                value="13:00 pm"
              >
                13:00 pm
              </option>
              <option
                value="14:00 pm"
              >
                14:00 pm
              </option>
              <option
                value="15:00 pm"
              >
                15:00 pm
              </option>
              <option
                value="16:00 pm"
              >
                16:00 pm
              </option>
              <option
                value="17:00 pm"
              >
                17:00 pm
              </option>
              <option
                value="18:00 pm"
              >
                18:00 pm
              </option>
              <option
                value="19:00 pm"
              >
                19:00 pm
              </option>
            </select>
            <div
              class="chakra-select__icon-wrapper css-1rn5cz7"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon chakra-select__icon css-13wnv3o"
                focusable="false"
                role="presentation"
                style="width: 1em; height: 1em; color: currentColor;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="chakra-select__wrapper css-42b2qy"
        >
          <select
            class="chakra-select css-1srlo7p"
            data-testid="selectPerson"
            id="field-:r0:"
            name="person"
            style="padding-left: 40px;"
          >
            <option
              value="1 Person"
            >
              1 Person
            </option>
            <option
              value="2 Person"
            >
              2 Person
            </option>
            <option
              value="3 Person"
            >
              3 Person
            </option>
            <option
              value="4 Person"
            >
              4 Person
            </option>
            <option
              value="5 Person"
            >
              5 Person
            </option>
            <option
              value="6 Person"
            >
              6 Person
            </option>
            <option
              value="7 Person"
            >
              7 Person
            </option>
            <option
              value="8 Person"
            >
              8 Person
            </option>
            <option
              value="9 Person"
            >
              9 Person
            </option>
            <option
              value="10 Person"
            >
              10 Person
            </option>
          </select>
          <div
            class="chakra-select__icon-wrapper css-1rn5cz7"
          >
            <svg
              aria-hidden="true"
              class="chakra-icon chakra-select__icon css-13wnv3o"
              focusable="false"
              role="presentation"
              style="width: 1em; height: 1em; color: currentColor;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-82fcae"
      >
        <button
          class="chakra-button css-6hbgfx"
          type="submit"
        >
          Book Now
        </button>
      </div>
    </div>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
